src/test/deca/codegen/valid/homemade/test/test_complet_equals_int_float.deca
{

    int x = 10;
    float y = 10.0;
    if (x == y){
        println("x = y");
    }
    else{
        println("x != y");
    }
}
