src/test/deca/codegen/invalid/homemade/test/test_complet_div_float_0.deca
{

    int x = 10;
    float y = 0.0;
    println("x / y = ",(x / y));
}
